edit map controller

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -37,7 +37,7 @@
 
 <label class="item item-input">
                 <span class="input-label">ที่อยู่ : </span>
-                <textarea style="background-color: white;padding-right: 1cm" type="textarea" ng-model="address" readonly></textarea>
+                <textarea style="background-color: white;padding-right: 1cm" type="textarea" ng-model="data.shipping.address" readonly></textarea>
 </label>
 <label class="item item-input">
                 <span class="input-label">เบอร์โทร : </span>
