--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -1,23 +1,4 @@
-<!--<ion-view view-title="{{data.user.displayName}}">
- 
-
-  <ion-content class="padding">
-    <img ng-src="{{data.user.profileImageURL}}" style="width: 64px; height: 64px">
-    <p>
-      {{data.user.displayName}}
-    </p>
-    <p>
-      {{data.shipping.address}} {{data.shipping.subdistrict}}
-    </p>
-    <p>
-      {{data.shipping.district}} {{data.shipping.province}}
-    </p>
-    <p>{{data.shipping.postcode}}</p>
-    <p><h2>ยอดรวมทั้งสิ้น : {{data.amount}} บาท</h2></p>
-  </ion-content>
-</ion-view>-->
-
-<ion-view view-title="Detail Orders">
+<ion-view view-title="รายละเอียด">
   <ion-content>
     <div class="list">
       <label class="item item-input">
