--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -1,24 +1,4 @@
-<!--<ion-view view-title="{{data.user.displayName}}">
- 
-
-  <ion-content class="padding">
-    <img ng-src="{{data.user.profileImageURL}}" style="width: 64px; height: 64px">
-    <p>
-      {{data.user.displayName}}
-    </p>
-    <p>
-      {{data.shipping.address}} {{data.shipping.subdistrict}}
-    </p>
-    <p>
-      {{data.shipping.district}} {{data.shipping.province}}
-    </p>
-    <p>{{data.shipping.postcode}}</p>
-    <p><h2>ยอดรวมทั้งสิ้น : {{data.amount}} บาท</h2></p>
-  </ion-content>
-</ion-view>-->
-
-
-<ion-view view-title="Detail Orders">
+<ion-view view-title="รายละเอียด">
     <ion-content>
         <div class="list">
 
@@ -74,32 +54,6 @@
 
 
         </div>
-        <!--<div class="list">
-            <div class='item'>
-                <label class="item item-input">
-                <span class="input-label">เลขใบสั่งซื้อ: </span>
-                <input type="text" ng-model="data.docno" >
-            </label>
-                <span>
-                <i>เลขใบสั่งซื้อ: {{data.docno}}</i>
-                <i style="padding-left: 4%">ราคารวม: {{data.amount}} บาท</i>
-            </span>
-                <div>
-                    <i>วันที่: {{data.docdate | date:"dd/MM/yyyy"}}</i>
-                </div>
-                <div>
-                    <i>ชื่อ: {{data.user.displayName}}</i>
-                </div>
-                <div>
-                    <i>ที่อยู่: {{data.shipping.address}} {{data.shipping.subdistrict}}</i>
-                </div>
-                <div>
-                    <i style="margin-left: 11%">     {{data.shipping.address}} {{data.shipping.subdistrict}} {{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</i>
-                </div>
-                <div>
-                    <i>เบอร์โทร: {{data.shipping.tel}}</i>
-                </div>
-            </div>-->
     </ion-content>
 
 </ion-view>
