--- a/www/templates/tab-me.html
+++ b/www/templates/tab-me.html
@@ -5,7 +5,7 @@
     
     <div class="input-group input-group-sm">
               <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" placeholder="Search for order..." ng-model="topsearch" aria-describedby="sizing-addon3">
+              <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
     </div>
     
     <ion-list>
