--- a/www/templates/tab-setting.html
+++ b/www/templates/tab-setting.html
@@ -4,7 +4,7 @@
       
       <a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-ios-close-outline"></i>
-        Sign Out
+        ออกจากระบบ
       </a>
     </div>
   
