--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -1,12 +1,10 @@
-<ion-view view-title="ตั้งค่า">
+<ion-view view-title="อื่นๆ">
   <ion-content>
    <div class="list">
-      
       <a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-ios-close-outline"></i>
         ออกจากระบบ
       </a>
     </div>
-  
-</ion-content>
+    </ion-content>
 </ion-view>
