--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,9 +24,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
-  <!-- Setting Tab -->
-  <ion-tab title="ตั้งค่า" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/setting">
-    <ion-nav-view name="tab-setting"></ion-nav-view>
+  <!-- More Tab -->
+  <ion-tab title="อื่นๆ" icon-off="ion-ios-more-outline" icon-on="ion-ios-more" href="#/tab/more">
+    <ion-nav-view name="tab-more"></ion-nav-view>
   </ion-tab>
 
 
