--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -19,8 +19,9 @@
 
             <label class="item item-input">
                 <span class="input-label">ที่อยู่ : </span>
-                <textarea style="background-color: white;padding-right: 1cm" type="textarea" ng-model="data.shipping.address" readonly></textarea>
-            </label>
+                <textarea style="background-color: white;padding-right: 1cm" type="textarea" readonly>{{data.shipping.address +''+data.shipping.subdistrict+''+data.shipping.district+''+data.shipping.province+''+data.shipping.postcode}}
+                    </textarea>
+            </label
 
             <label class="item item-input">
                 <span class="input-label">เบอร์โทร : </span>
@@ -32,7 +33,7 @@
                 <img src={{item.product.images}}>
                 <h2>{{item.product.name}} ({{item.product.price}} บาท)</h2>
                 <p style="margin-right: 20%">จำนวน {{item.qty}}</p>
-                <p style="margin-right: 20%">ราคารวม {{item.totalamount}} บาท</p>
+                <p style="margin-right: 20%">ราคารวม {{data.amount}} บาท</p>
 
             </div>
 
@@ -44,12 +45,12 @@
 
             <label class="item item-input">
                 <span class="input-label" >ส่วนลด : </span>
-                <input style="background-color: white" type="text" ng-value="data.discount + ' ' + 'บาท'" readonly>
+                <input style="background-color: white" type="text" ng-value="data.discountpromotion + ' ' + 'บาท'" readonly>
             </label>
 
             <label class="item item-input">
                 <span class="input-label">ราคาสุทธิ : </span>
-                <input style="background-color: white" type="text" ng-value="data.amount + ' ' + 'บาท'" readonly>
+                <input style="background-color: white" type="text" ng-value="data.totalamount + ' ' + 'บาท'" readonly>
             </label>
 
 
