--- a/www/templates/tab-me.html
+++ b/www/templates/tab-me.html
@@ -15,8 +15,8 @@
         <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
         <p style="margin-right: 20%">{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
         <p style="margin-right: 20%">{{data.shipping.tel}}</p>
-        <p class="icon ion-right ">{{data.totalamount}} ฿</p>
-        <ion-option-button class="button-positive" ng-click="completeDeliver(data)">Complete</ion-option-button>
+        <p class="icon ion-right amount ">{{data.totalamount | number:0}} ฿</p>
+        <ion-option-button class="button-positive" ng-click="completeDeliver(data)">สำเร็จ</ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
