--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -15,10 +15,10 @@
         <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
         <p style="margin-right: 20%">{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
         <p style="margin-right: 20%">{{data.shipping.tel}}</p>
-        <p class="icon ion-right ">{{data.totalamount}} ฿</p>
+        <p class="icon ion-right amount">{{data.totalamount | number:0}} ฿</p>
         
-        <ion-option-button class="button-assertive" ng-click="rejectDeliver(data)">Reject</ion-option-button>
-        <ion-option-button class="button-positive" ng-click="acceptDeliver(data)">Accept</ion-option-button>
+        <ion-option-button class="button-assertive" ng-click="rejectDeliver(data)">ปฏิเสธ</ion-option-button>
+        <ion-option-button class="button-positive" ng-click="acceptDeliver(data)">ยอมรับ</ion-option-button>
       </ion-item>
     </ion-list>
 
