--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -38,9 +38,13 @@
 
             <label class="item item-input">
                 <span class="input-label">ราคารวม : </span>
-                <input style="background-color: white" type="text" ng-value="data.amount+data.discount +' บาท'" readonly>
+                <input style="background-color: white" type="text" ng-value="data.amount+' บาท'" readonly>
             </label>
 
+            <label class="item item-input">
+                <span class="input-label">ค่าจัดส่ง : </span>
+                <input style="background-color: white" type="text" ng-value="data.deliveryamount +' บาท'" readonly>
+            </label>
 
             <label class="item item-input">
                 <span class="input-label" >ส่วนลด : </span>
