--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -31,7 +31,7 @@
             <div class='item item-avatar-left item-icon-right item-text-wrap' ng-repeat="item in data.items">
                 <img src={{item.product.images}}>
                 <h2>{{item.product.name}} ({{item.product.price}} บาท)</h2>
-                <p style="margin-right: 20%">จำนวน {{item.qty}}</p>
+                <p style="margin-right: 20%">จำนวน {{item.qty}} ถุง</p>
                 <p style="margin-right: 20%">ราคารวม {{data.amount}} บาท</p>
 
             </div>
