--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -16,7 +16,7 @@
             <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
         </div>
         <ion-list>
-            <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in ordersComplete | filter:topsearch" ng-click="btnGo(data)">
+            <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in OrdersCpt | filter:topsearch" ng-click="btnGo(data)">
                 <img src={{data.user.profileImageURL}}>
                 <h2>{{data.user.displayName}}</h2>
                 <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
@@ -34,12 +34,13 @@
         <ion-header-bar class="bar bar-header bar-positive"> 
           <button class="button button-clear button-primary" ng-click="modal.hide()">ยกเลิก</button> 
           <h1 class="title">เลือกสินค้า</h1> 
-            <button class="button button-clear" ng-click="saveOrder()">บันทึก</button> 
+            <!--<button class="button button-clear" ng-click="saveOrder()">บันทึก</button> -->
+            <button class="button button-clear" ng-click="showConfirm()">บันทึก</button> 
         </ion-header-bar> 
         <ion-content class="padding"> 
             <div class="input-group input-group-sm"> 
       <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span> 
-      <input type="text" class="form-control" placeholder="Search for order..." ng-model="topsearch" aria-describedby="sizing-addon3"> 
+      <input type="text" class="form-control" placeholder="ค้นหาสินค้า..." ng-model="topsearch" aria-describedby="sizing-addon3"> 
     </div>
           <div class="row"> 
   <div class="col" class="list card">  
