--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -8,7 +8,7 @@
               <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
         </div>
     <ion-list>
-      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in orders | filter:topsearch"  ng-click = "btnGo(data)">
+      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in Order | filter:topsearch"  ng-click = "btnGo(data)">
         <img src={{data.user.profileImageURL}}>
         <h2>{{data.user.displayName}}</h2>
         <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
