--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -26,7 +26,15 @@
                 <span class="input-label">เบอร์โทร : </span>
                 <input style="background-color: white" type="text" ng-model="data.shipping.tel" readonly>
             </label>
-
+            <div class="row">
+            <div class="col"></div>
+            <div class="col col-90">
+                <button class="button button-block button-positive"  ng-click = "completeDeliver(data)">
+                            ส่งแล้ว
+                        </button>
+            </div>
+            <div class="col"></div>
+        </div>
 
             <div class='item item-avatar-left item-icon-right item-text-wrap' ng-repeat="item in data.items">
                 <img src={{item.product.images}}>
