--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -14,16 +14,16 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 </div>
   <!-- Me Tab -->
-  <div ng-controller="MeCtrl" ng-init="init()">
+  <div ng-controller="NewCtrl" ng-init="init()">
   <ion-tab title="ของฉัน" badge="countOrderApt"  icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/me">
     <ion-nav-view name="tab-me"></ion-nav-view>
   </ion-tab>
   </div>
 
   <!-- Map Tab -->
-  <ion-tab title="แผนที่" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/map">
+  <!--<ion-tab title="แผนที่" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/map">
     <ion-nav-view name="tab-map"></ion-nav-view>
-  </ion-tab>
+  </ion-tab>-->
 
   <!-- More Tab -->
   <ion-tab title="อื่นๆ" icon-off="ion-ios-more-outline" icon-on="ion-ios-more" href="#/tab/more">
