--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -1,14 +1,14 @@
 <ion-view view-title="อื่นๆ">
   <ion-content>
    <div class="list">
-     <!--<a class="item item-icon-left settings-option" ng-click="listbl()">
+     <a class="item item-icon-left settings-option" ng-click="listbl()">
         <i class="icon ion-ios-list-outline"></i>
         เปิดบิลลอย
       </a>
       <a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-social-bitcoin-outline"></i>
         ใบแจ้งหนี้
-      </a>-->
+      </a>
       <a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-ios-close-outline"></i>
         ออกจากระบบ
