--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,9 +21,9 @@ navigation history that also transitions its views in and out.
   </div>
 
   <!-- Map Tab -->
-  <!--<ion-tab title="แผนที่" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/map">
+  <ion-tab title="แผนที่" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/map">
     <ion-nav-view name="tab-map"></ion-nav-view>
-  </ion-tab>-->
+  </ion-tab>
 
   <!-- More Tab -->
   <ion-tab title="อื่นๆ" icon-off="ion-ios-more-outline" icon-on="ion-ios-more" href="#/tab/more">
