--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -9815,4 +9815,25 @@ a.button {
 .amount {
     font-size: larger !important;
     font-weight: 500;
-};
+}
+
+.dataMargin {
+  margin-right: 20%;
+}
+
+.addQty {
+  font-size: 30px; 
+  color: mediumseagreen;
+}
+
+.removeQty {
+  font-size: 30px; 
+  color: orangered;
+}
+
+.bindQty {
+  /*font-size: 20px; 
+  font-weight: bold;*/
+  font-size: larger !important;
+  font-weight: 900;
+}
