--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -13,18 +13,18 @@
             <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in OrdersCpt | filter:topsearch" ng-click="btnGo(data)">
                 <img src={{data.user.profileImageURL}}>
                 <h2>{{data.user.displayName}}</h2>
-                <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
-                <p style="margin-right: 20%">{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
-                <p style="margin-right: 20%">{{data.shipping.tel}}</p>
+                <p class="dataMargin">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
+                <p class="dataMargin">{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
+                <p class="dataMargin">{{data.shipping.tel}}</p>
                 <p class="icon ion-right amount">{{data.totalamount | number:0}} ฿</p>
-                
+
                 <ion-option-button class="button-assertive" ng-click="rejectDeliver(data)">ปฏิเสธ</ion-option-button>
                 <ion-option-button class="button-positive" ng-click="acceptDeliver(data)">ยอมรับ</ion-option-button>
             </ion-item>
         </ion-list>
-</ion-content>
+    </ion-content>
 
-<script id="templates/modal.html" type="text/ng-template"> 
+    <script id="templates/modal.html" type="text/ng-template"> 
       <ion-modal-view> 
         <ion-header-bar class="bar bar-header bar-positive"> 
           <button class="button button-clear button-primary" ng-click="modal.hide()">ยกเลิก</button>
@@ -39,7 +39,7 @@
                 </div>
                 
         <div class="row">
-            <div class="col" class="list card">
+            <div class="col list card">
                 <div class="list" ng-repeat="product in products | filter:topsearch">
                     <a class="item item-thumbnail-left">
                         <img src="{{product.product.images}}">
@@ -49,26 +49,24 @@
                                 <h2>ราคา/ชิ้น : {{product.product.price}}</h2>
                                 <h2>ราคารวม : {{product.amount || 0}}</h2>
                             </div>
-
             <div class="col-20"> 
                 <div class="row"> 
                     <div class="col" align="center"> 
-                        <i class="icon ion-plus-circled" style="font-size:30px; color:mediumseagreen" ng-click="addQty(product)"></i> 
+                        <i class="icon ion-plus-circled addQty" ng-click="addQty(product)"></i> 
                     </div> 
                 </div> 
 
                 <div class="row" align="center"> 
                     <div class="col"> 
-                        <p style="font-size:20px; font-weight:bold" ng-bind="product.qty || 0"></p> 
+                        <p class="bindQty" ng-bind="product.qty || 0"></p> 
                     </div> 
                 </div> 
 
                 <div class="row"> 
                     <div class="col" align="center"> 
-                        <i class="icon ion-minus-circled" style="font-size:30px; color:orangered" ng-click="removeQty(product)"></i> 
+                        <i class="icon ion-minus-circled removeQty" ng-click="removeQty(product)"></i> 
                     </div> 
                 </div>
-                
             </div> 
         </div>
     </a>
