--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -1,6 +1,7 @@
 <ion-view view-title="ประวัติส่วนตัว" ng-init="init()">
     <ion-content>
-
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        </ion-refresher>
         <div class="list card">
             <div class="item item-body">
                 <div align="center">
@@ -55,10 +56,12 @@
                     <div id="map" data-tap-disabled="true"> </div>
                 </ion-content>
             </div>
+
             <div class="button-bar">
-                <a class="button button-positive" ng-click="centerOnMe()">ลองอีกครั้ง</a>
-                <a class="button button-balanced" ng-click="postme()">ส่งตำแหน่ง</a>
-            </div>
+            <a class="button button-positive" ng-click="centerOnMe()">ลองอีกครั้ง</a>
+            <a class="button button-balanced" ng-click="postme()">ส่งตำแหน่ง</a>
+        </div>
+
         </div>
     </ion-content>
 </ion-view>
