--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -5,10 +5,10 @@
         <i class="icon ion-ios-list-outline"></i>
         เปิดบิลลอย
       </a>
-      <a class="item item-icon-left settings-option" ng-click="doLogOut()">
+      <!--<a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-social-bitcoin-outline"></i>
         ใบแจ้งหนี้
-      </a>
+      </a>-->
       <a class="item item-icon-left settings-option" ng-click="listdetail()">
         <i class="icon ion-ios-contact-outline"></i>
         ประวัติส่วนตัว
