--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -1,4 +1,7 @@
 <ion-view view-title="บิลลอย" ng-init="init()">
+    <ion-nav-buttons side="primary">
+        <button class="button button-stable button-clear" ui-sref="tab.more">Back</button>
+    </ion-nav-buttons>
     <ion-nav-buttons side="right">
         <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
     </ion-nav-buttons>
@@ -24,56 +27,56 @@
         </ion-list>
     </ion-content>
 
-    <script id="templates/modal.html" type="text/ng-template"> 
-      <ion-modal-view> 
-        <ion-header-bar class="bar bar-header bar-positive"> 
-          <button class="button button-clear button-primary" ng-click="modal.hide()">ยกเลิก</button>
-          <h1 class="title">เลือกสินค้า</h1> 
-            <button class="button button-clear" ng-click="showConfirm()">บันทึก</button> 
-        </ion-header-bar> 
+    <script id="templates/modal.html" type="text/ng-template">
+        <ion-modal-view>
+            <ion-header-bar class="bar bar-header bar-positive">
+                <button class="button button-clear button-primary" ng-click="modal.hide()">ยกเลิก</button>
+                <h1 class="title">เลือกสินค้า</h1>
+                <button class="button button-clear" ng-click="showConfirm()">บันทึก</button>
+            </ion-header-bar>
 
-        <ion-content class="padding">
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" placeholder="ค้นหาสินค้า..." ng-model="topsearch" aria-describedby="sizing-addon3">
+            <ion-content class="padding">
+                <div class="input-group input-group-sm">
+                    <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
+                    <input type="text" class="form-control" placeholder="ค้นหาสินค้า..." ng-model="topsearch" aria-describedby="sizing-addon3">
                 </div>
-                
-        <div class="row">
-            <div class="col list card">
-                <div class="list" ng-repeat="product in products | filter:topsearch">
-                    <a class="item item-thumbnail-left">
-                        <img src="{{product.product.images}}">
-                        <div class="row">
-                            <div class="col-80">
-                                <h2>ชื่อสินค้า : {{product.product.name}}</h2>
-                                <h2>ราคา/ชิ้น : {{product.product.price}}</h2>
-                                <h2>ราคารวม : {{product.amount || 0}}</h2>
-                            </div>
-            <div class="col-20"> 
-                <div class="row"> 
-                    <div class="col" align="center"> 
-                        <i class="icon ion-plus-circled addQty" ng-click="addQty(product)"></i> 
-                    </div> 
-                </div> 
 
-                <div class="row" align="center"> 
-                    <div class="col"> 
-                        <p class="bindQty" ng-bind="product.qty || 0"></p> 
-                    </div> 
-                </div> 
+                <div class="row">
+                    <div class="col list card">
+                        <div class="list" ng-repeat="product in products | filter:topsearch">
+                            <a class="item item-thumbnail-left">
+                                <img src="{{product.product.images}}">
+                                <div class="row">
+                                    <div class="col-80">
+                                        <h2>ชื่อสินค้า : {{product.product.name}}</h2>
+                                        <h2>ราคา/ชิ้น : {{product.product.price}}</h2>
+                                        <h2>ราคารวม : {{product.amount || 0}}</h2>
+                                    </div>
+                                    <div class="col-20">
+                                        <div class="row">
+                                            <div class="col" align="center">
+                                                <i class="icon ion-plus-circled addQty" ng-click="addQty(product)"></i>
+                                            </div>
+                                        </div>
 
-                <div class="row"> 
-                    <div class="col" align="center"> 
-                        <i class="icon ion-minus-circled removeQty" ng-click="removeQty(product)"></i> 
-                    </div> 
+                                        <div class="row" align="center">
+                                            <div class="col">
+                                                <p class="bindQty" ng-bind="product.qty || 0"></p>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col" align="center">
+                                                <i class="icon ion-minus-circled removeQty" ng-click="removeQty(product)"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-            </div> 
-        </div>
-    </a>
-</div>
-</div> 
-</div> 
-        </ion-content> 
-      </ion-modal-view> 
+            </ion-content>
+        </ion-modal-view>
     </script>
 </ion-view>
