--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="แผนที่" ng-init="init()">
+<ion-view view-title="แผนที่" ng-init="init()"  cache-view="false">
   <ion-content>
     <div id="map" data-tap-disabled="true"> </div>
   
