--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -1,6 +1,6 @@
 <ion-view view-title="บิลลอย" ng-init="init()">
     <ion-nav-buttons side="primary">
-        <button class="button button-stable button-clear" ui-sref="tab.more">Back</button>
+        <button class="button button-clear" ui-sref="tab.more">Back</button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
         <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
