--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -52,7 +52,7 @@
                 <img src={{item.product.images}}>
                 <h2>{{item.product.name}} ({{item.product.price}} บาท)</h2>
                 <p style="margin-right: 20%">จำนวน {{item.qty}} ถุง</p>
-                <p style="margin-right: 20%">ราคารวม {{data.amount}} บาท</p>
+                <p style="margin-right: 20%">ราคารวม {{item.amount}} บาท</p>
 
             </div>
 
