--- a/www/templates/billdetail.html
+++ b/www/templates/billdetail.html
@@ -1,7 +1,7 @@
 <ion-view view-title="รายละเอียด">
-  <ion-nav-buttons side="primary">
+  <!--<ion-nav-buttons side="primary">
     <button class="button button-clear" ui-sref="tab.more">Back</button>
-  </ion-nav-buttons>
+  </ion-nav-buttons>-->
   <ion-content>
     <div class="list">
       <label class="item item-input">
