--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -1,10 +1,14 @@
 <ion-view view-title="บิลลอย" ng-init="init()">
-    <ion-nav-buttons side="primary">
-        <button class="button button-clear" ui-sref="tab.more">Back</button>
-    </ion-nav-buttons>
-    <ion-nav-buttons side="right">
-        <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
-    </ion-nav-buttons>
+
+    <ion-nav-bar align-title="center">
+        <ion-nav-buttons side="left">
+            <button class="button button-icon icon-left" ui-sref="tab.more">Back
+      </button>
+        </ion-nav-buttons>
+        <ion-nav-buttons side="right">
+            <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
 
     <ion-content>
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
