--- a/www/templates/billdetail.html
+++ b/www/templates/billdetail.html
@@ -2,6 +2,9 @@
   <!--<ion-nav-buttons side="primary">
     <button class="button button-clear" ui-sref="tab.more">Back</button>
   </ion-nav-buttons>-->
+  <ion-nav-buttons side="right">
+    <button class="button button-clear" ng-click="showConfirm(data)">ลบข้อมูล</button>
+  </ion-nav-buttons>
   <ion-content>
     <div class="list">
       <label class="item item-input">
