--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -9850,3 +9850,19 @@ a.button {
 .hbody{
   height: 200px;
 }
+
+.iconic {
+   font-size: 5px;
+   color: limegreen;
+}
+
+.marT {
+  margin-top: 30px;
+}
+
+.marR {
+  margin-right: 40px;
+  font-size: medium !important;
+  font-weight: 500;
+  color: limegreen;
+}
