tab more add request

--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -5,6 +5,14 @@
         <i class="icon ion-ios-list-outline"></i>
         เปิดบิลลอย
       </a>
+      <a class="item item-icon-left settings-option" ng-click="listreceived()">
+        <i class="icon ion-ios-chatboxes-outline"></i>
+        รายการรับข้าว
+      </a>
+      <a class="item item-icon-left settings-option" ng-click="()">
+        <i class="icon ion-social-buffer-outline"></i>
+        สต๊อก
+      </a>
       <!--<a class="item item-icon-left settings-option" ng-click="doLogOut()">
         <i class="icon ion-social-bitcoin-outline"></i>
         ใบแจ้งหนี้
