--- a/www/templates/listreceived.html
+++ b/www/templates/listreceived.html
@@ -1,11 +1,11 @@
 <ion-view view-title="รายการรับข้าว" ng-init="init()">
-    <ion-nav-bar align-title="center">
+    <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon icon-left" ui-sref="tab.more">Back
       </button>
         </ion-nav-buttons>
 
-    </ion-nav-bar>
+    </ion-nav-bar>-->
     <ion-content>
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
         </ion-refresher>
