tab more add stock , return , ar

--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -9,14 +9,18 @@
         <i class="icon ion-ios-bookmarks-outline"></i>
         รายการรับข้าว
       </a>
-      <a class="item item-icon-left settings-option" ng-click="()">
+      <a class="item item-icon-left settings-option" ng-click="liststock()">
         <i class="icon ion-social-buffer-outline"></i>
         สต๊อก
       </a>
-      <!--<a class="item item-icon-left settings-option" ng-click="doLogOut()">
+      <a class="item item-icon-left settings-option" ng-click="listReturn()">
+        <i class="icon ion-social-bitcoin-outline"></i>
+        ใบแจ้งคืน
+      </a>
+      <a class="item item-icon-left settings-option" ng-click="listAr()">
         <i class="icon ion-social-bitcoin-outline"></i>
         ใบแจ้งหนี้
-      </a>-->
+      </a>
       <a class="item item-icon-left settings-option" ng-click="listdetail()">
         <i class="icon ion-ios-contact-outline"></i>
         ประวัติส่วนตัว
