--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -9858,6 +9858,14 @@ a.button {
   margin-top: 30px;
 }
 
+.marT10 {
+  margin-top: 10px;
+}
+
+.marB {
+margin-bottom:-10px
+}
+
 .marR {
   margin-right: 40px;
   font-size: medium !important;
@@ -9869,4 +9877,11 @@ a.button {
   margin-top: -35px;
   font-size: small !important;
   font-weight: 500;
+}
+.img-circle {
+  max-width: 40px;
+    max-height: 40px;
+    width: 100%;
+    height: 100%;
+  border-radius: 50%;
 }
