--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -14,12 +14,12 @@
         สต๊อก
       </a>
       <a class="item item-icon-left settings-option" ng-click="listReturn()">
-        <i class="icon ion-social-bitcoin-outline"></i>
-        ใบแจ้งคืน
+        <i class="icon icon ion-ios-list-outline"></i>
+        รายการใบแจ้งคืน
       </a>
       <a class="item item-icon-left settings-option" ng-click="listAr()">
-        <i class="icon ion-social-bitcoin-outline"></i>
-        ใบแจ้งหนี้
+        <i class="icon icon ion-ios-list-outline"></i>
+        รายการใบแจ้งหนี้
       </a>
       <a class="item item-icon-left settings-option" ng-click="listdetail()">
         <i class="icon ion-ios-contact-outline"></i>
