--- a/www/templates/detailreturn.html
+++ b/www/templates/detailreturn.html
@@ -30,7 +30,7 @@
                 <input style="background-color: white" type="text" ng-model="data.shipping.tel" readonly>
             </label>
             <a class="item item-icon-left" ng-show="data.transport">
-              <i class="icon ion-person-stalker"></i>
+              <i class="icon ion-android-bus"></i>
                 บริษัทขนส่งข้าว
               <span class="input-label" ng-show="data.namedeliver">{{data.transport.displayName}}</span>
             </a>
