--- a/www/templates/liststock.html
+++ b/www/templates/liststock.html
@@ -1,11 +1,14 @@
 <ion-view view-title="คลังสินค้า" ng-init="init()">
     <ion-content>
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        </ion-refresher>
+
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
             <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
         </div>
         <div class="list" ng-repeat="stock in stockdeli">
-            <a class="item item-thumbnail-left" ng-repeat="pro in stock.stocks">
+            <a class="item item-thumbnail-left" ng-repeat="pro in stock.stocks | filter:topsearch">
                 <img src="{{pro.product.images}}">
                 <h2>{{pro.product.name}}</h2>
                 <p>รับเข้า : {{pro.income}}</p>
