--- a/www/templates/liststock.html
+++ b/www/templates/liststock.html
@@ -16,7 +16,7 @@
                 <p>จ่ายแล้ว : {{pro.ap}}</p>
                 <p>ขายออก : {{pro.outcome}}</p>
                 <p>จอง : {{pro.wip}}</p>
-                <p>คงเหลือ : {{(pro.income-(pro.ap+pro.outcome+pro.wip))+pro.returnord}}</p>
+                <p>คงเหลือ : {{(pro.income-(pro.ap+pro.outcome+pro.wip+pro.returnord))}}</p>
              
             </a>
         </div>
