--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -1,8 +1,6 @@
 <ion-view view-title="โปรไฟล์">
-
-
     <ion-content has-header="true">
-        <img id="profile-image" src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t1.0-9/18157324_10208584742357830_4256608797500139092_n.jpg?oh=38f76dd260acbd194313f9b59ec1f58f&oe=59AC1BE8">
+        <img id="profile-image" src="{{data.user.profileImageURL}}">
         <ion-list>
             <div class="list">
                 <label class="item item-input">
